config/k8s-ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - secretName: ubidy-secret-tls
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: vault
              servicePort: 8200
          - path: /
            backend:
              serviceName: hydra-public
              servicePort: 4444
